--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
      outline: none;
      transition: all 0.3s ease;
      scroll-behavior: smooth;
-     font-family: 'Poppins', sans-serif;
+     font-family: 'Lexend', sans-serif;
  }
 
  /* :root {
@@ -723,6 +723,15 @@
         font-size: 36%;
         padding-left:  2.5rem;
         padding-right: 2.5rem;
+    }
+     .about p, h2, h3{
+        margin-right: 0;
+        text-align: justify;
+    }
+
+    .services h3{
+        font-size: 2.2rem;
+        text-align: center;
     }
     
     .contact form .input-box input{
